--- a/public/screen.css
+++ b/public/screen.css
@@ -13,7 +13,7 @@ h1 {
   font-family: 'Ultra', serif;
   font-weight: normal;
   color: white;
-  /* text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000; */
+  text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.6);
   margin: 0;
   padding-top: 3.5rem;
   padding-bottom: 3.5rem;
@@ -24,15 +24,35 @@ h1 {
   text-align: center;
   background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.75)),
     url('https://picjumbo.com/wp-content/uploads/playing-cards_free_stock_photos_picjumbo_DSC07167-2210x1473.jpg');
-}
-
-li {
-  list-style: none;
+  border-bottom: 4px solid rgb(230, 242, 233);
 }
 
 .play-area {
   display: flex;
   justify-content: space-evenly;
+}
+
+.game-results {
+  font-family: 'Ultra', serif;
+  color: white;
+  text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.6);
+  margin: 2.5rem 0;
+  font-size: 2rem;
+  line-height: 2rem;
+}
+
+.left {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-left: 0.75rem;
+}
+
+.right {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-right: 0.75rem;
 }
 
 .hit,
@@ -43,8 +63,10 @@ li {
   width: 10rem;
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
+  margin-bottom: 1rem;
   border-radius: 7px;
   border: 3px solid rgba(0, 0, 0, 0.3);
+  box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
 }
 
 .hit:hover,
@@ -54,8 +76,43 @@ li {
   cursor: pointer;
 }
 
-.game-results {
-  font-size: 2rem;
+p {
+  font-family: 'Ultra', serif;
+  color: rgba(0, 0, 0, 0.75);
+  text-align: center;
+}
+
+.player-total,
+.dealer-total {
+  font-size: 1.4rem;
+  margin-top: 0;
+}
+
+.player-hand {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.player-hand img {
+  width: 6rem;
+  margin: 0.6rem;
+  box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
+  border-radius: 4px;
+}
+
+.dealer-hand {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.dealer-hand img {
+  width: 6rem;
+  height: 139px;
+  margin: 0.6rem;
+  box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
+  border-radius: 4px;
 }
 
 .hidden {
@@ -82,4 +139,45 @@ li {
   color: rgba(0, 0, 0, 0.75);
   background-color: rgb(249, 114, 114);
   cursor: pointer;
+}
+
+@media only screen and (max-width: 560px) {
+  h1 {
+    font-size: 4rem;
+  }
+}
+
+@media only screen and (max-width: 460px) {
+  h1 {
+    font-size: 3.5rem;
+  }
+}
+
+@media only screen and (max-width: 420px) {
+  h1 {
+    font-size: 3rem;
+  }
+
+  .game-results {
+    font-size: 1.6rem;
+  }
+
+  .hit,
+  .stay {
+    width: 7rem;
+  }
+}
+
+@media only screen and (max-width: 360px) {
+  h1 {
+    font-size: 2.6rem;
+  }
+
+  .left {
+    margin-left: 0.5rem;
+  }
+
+  .right {
+    margin-right: 0.5rem;
+  }
 }
