--- a/public/screen.css
+++ b/public/screen.css
@@ -67,6 +67,7 @@ h1 {
   border-radius: 7px;
   border: 3px solid rgba(0, 0, 0, 0.3);
   box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
+  background-color: white;
 }
 
 .hit:hover,
@@ -133,6 +134,8 @@ p {
   padding-bottom: 0.5rem;
   border-radius: 7px;
   border: 3px solid rgba(0, 0, 0, 0.3);
+  background-color: white;
+  b
 }
 
 .reset:hover {
